tests/ui/errors/repetition.no-context.member-type.rs
use fortuples::fortuples;

struct Container<T>(T);

fortuples! {
    impl Container<#Tuple> {
        #Member
    }
}

fn main() {}
